Added a correct/incorrect "popup"
Popup occurs when an answer is selected. It is paired with a "next" button which refreshes the list onto the next question set.

--- a/Who's that Pokemon.css
+++ b/Who's that Pokemon.css
@@ -23,3 +23,16 @@ main{
 img{
     cursor: pointer;
 }
+
+#popUpCorrect{
+
+    z-index: 1;
+    top: 10%;
+    background-color: #41AABA;
+    opacity: 95%;
+}
+
+.figurePopUp{
+
+    background-color: #CFEBE7;
+}
