99% done with comments added.
Project does what it was intended to do. Comments were added and some code was cleaned up.

--- a/Who's that Pokemon.css
+++ b/Who's that Pokemon.css
@@ -11,7 +11,7 @@ main{
     background-color: #6BBDD8;
 }
 
-#questions, .list-group, .list-group-item{
+#questions, .list-group-item{
     background-color: #FDCA05;
 }
 
